force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>Invoice2</label>
    <nameField>
        <displayFormat>Inv-{0000}</displayFormat>
        <label>Invoice Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>