force-app/main/default/objects/Invoice__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <label>Amount Received</label>
    <summarizedField>Payment1__c.Collected_Amount__c</summarizedField>
    <summaryForeignKey>Payment1__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>