force-app/main/default/objects/Invoice__c/fields/Store_name__c.field-meta.xml
<CustomField>
    <fullName>Store_name__c</fullName>
    <label>Store name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>